# Numerical-Methods-From-Scratch

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MATH.md  PRD.md  README.md  portfolio_entry.md  release_notes.md  report.tex
.github/workflows/: ci.yml
docs/derivations/: Bisection_Method.md  Error_Analysis.md  Euler_Method.md  Fixed_Point_Iteration.md  Interpolation.md  Iterative_Linear_Solvers.md  LU_Decomposition.md  Newton_Raphson.md  Numerical_Integration.md  Secant_Method.md
examples/: CMakeLists.txt  generate_plots.cpp  root_finding_example.cpp
include/numerical_methods/calculus/: differentiation.hpp  integration.hpp
include/numerical_methods/common/: error_metrics.hpp  result.hpp
include/numerical_methods/interpolation/: cubic_spline.hpp  polynomial.hpp
include/numerical_methods/linear_algebra/: gaussian_elimination.hpp  iterative_solvers.hpp  lu_decomposition.hpp  matrix_utils.hpp
include/numerical_methods/ode/: solvers.hpp
include/numerical_methods/root_finding/: bisection.hpp  fixed_point_iteration.hpp  newton_raphson.hpp  secant.hpp
tests/: CMakeLists.txt
tests/calculus/: test_calculus.cpp
tests/common/: test_common.cpp
tests/interpolation/: test_interpolation.cpp
tests/linear_algebra/: test_linear_algebra.cpp
tests/ode/: test_ode.cpp
tests/root_finding/: test_root_finding.cpp
